# KelvinBot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  codecov.yml  docker-compose.example.yml
.github/workflows/: ci.yml  docker-publish.yml  pr-check.yml
src/: bus.rs  config.rs  lib.rs  main.rs  message.rs  middleware.rs  service.rs  store.rs
src/core/: bus.rs  config.rs  event.rs  middleware.rs  service.rs
src/middlewares/: attendance_relay.rs  chat_relay.rs  echo.rs  ezstream_announce.rs  invite.rs  logger.rs  movie_showtimes.rs  regal_showtimes.rs  weekly_gathering.rs
src/services/: dummy.rs  matrix.rs  mumble.rs
tests/: README.md  integration_tests.rs  unit_tests.rs
tests/common/: mod.rs
tests/integration/: configuration.rs  event_flow.rs  mod.rs  service_lifecycle.rs
tests/unit/: bus.rs  config.rs  event.rs  middleware.rs  mod.rs  service.rs  thread_reply.rs
