[package]
name = "kelvin-bot"
edition = "2024"

[[bin]]
name = "kelvin-bot"
path = "src/main.rs"

[lib]
name = "kelvin_bot"
path = "src/lib.rs"

[dependencies]
config = "0.15"
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1.0"
serde_with = "3"
toml = "0.9"
async-trait = "0.1"
matrix-sdk = { version = "0.14", features = ["anyhow", "bundled-sqlite", "markdown"] }
reqwest = { version = "0.12", features = ["json"] }
secrecy = { version = "0.10", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
humantime-serde = "1.1"
chrono = "0.4"
mumble-protocol-2x = "0.6"
native-tls = "0.2"
tokio-native-tls = "0.3"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_matches = "1.5"
serde_json = "1.0"